#964 | Added possibility to exclude directories from the project scanning during the Project Import